# sict-bimini

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
chroma_db/86422eeb-6be2-416e-9eef-0c350856e377/: index_metadata.pickle
data/csv/: KBIMS_03-기초.csv  KBIMS_04-기둥.csv  KBIMS_05-보.csv  KBIMS_06-바닥.csv  KBIMS_07-벽.csv  KBIMS_08-천장.csv  KBIMS_09-지붕.csv  KBIMS_10-문.csv  KBIMS_11-창.csv  KBIMS_12-커튼월.csv  KBIMS_13-계단.csv  KBIMS_14-램프.csv  KBIMS_15-난간.csv  KBIMS_16-가구 및 장비.csv  KBIMS_17-위생설비.csv  KBIMS_18-조경.csv  KBIMS_19-운송설비.csv  KBIMS_20-주석기호.csv  KBIMS_21-기타 환경(토목).csv
data/models/: evaluation_report.txt  part_code_model.pth
data/txt/: xlsx_filenames.txt
src/: build_dataset.py  config.py  embedding.py  loader.py  main.py  model.py  preprocessing.py  store.py  train.py  xlsm2json.py
src/converters/: xlsm2json.py  xlsx2csv.py
src/processors/: rules.py
src/utils/: change_extension.py  xlsx_list.py
