[project]
name = "sict-bimini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "langchain-text-splitters>=0.3.11",
    "python-dotenv>=1.1.1",
    "pandas>=2.3.2",
    "openpyxl>=3.1.5",
    "tiktoken>=0.11.0",
]
