[project]
name = "sict-bimini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-core>=0.3.75",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "langchain-text-splitters>=0.3.11",
    "faiss-cpu>=1.12.0",
    "tiktoken>=0.11.0",
    "python-dotenv>=1.1.1",
    "pandas>=2.3.2",
    "openpyxl>=3.1.5",
    "tqdm>=4.65.0",
]
